crates/solidity-v2/testing/snapshots/cst_output/ContractMembers/separated_recovery/generated/0.8.0-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Error: Unexpected Identifier. One of CloseParen, Comma was expected
   ╭─[ crates/solidity-v2/testing/snapshots/cst_output/ContractMembers/separated_recovery/input.sol:3:36 ]
   │
 3 │ function all() override(some.ident unexpected tokens, ISomeInterface, Other) public {
   │                                    ─────┬────  
   │                                         ╰────── Error occurred here.
───╯
